--- a/Manager/CMakeLists.txt
+++ b/Manager/CMakeLists.txt
@@ -21,6 +21,6 @@ set(MANAGER_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR} CACHE INTERNAL "")
 
 add_library (${PROJECT_NAME} ${DIR_ManagerLIB_SRCS} )
 
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} base jsoncpp ${PROTOBUF_LIBRARIES} ${CPR_LIBRARIES} ${ELASTICLIENT_LIBRARIES} )
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} base jsoncpp ${PROTOBUF_LIBRARIES} ${CPR_LIBRARIES} ${ELASTICLIENT_LIBRARIES} comm)
 install(TARGETS ${PROJECT_NAME} LIBRARY
         DESTINATION lib)
