--- a/dbput/CMakeLists.txt
+++ b/dbput/CMakeLists.txt
@@ -19,6 +19,7 @@ endif()
 endif()
 INCLUDE_DIRECTORIES(
     ${COMM_INCLUDE_DIRS}
+    ${MANAGER_INCLUDE_DIRS}
     ${JSONCPP_INCLUDE_DIRS}
     ${CPR_INCLUDE_DIRS}
     ${ELASTICLIENT_INCLUDE_DIRS}
