--- a/Manager/CMakeLists.txt
+++ b/Manager/CMakeLists.txt
@@ -3,6 +3,9 @@
 project(manager)
 cmake_minimum_required(VERSION 3.0)
 add_compile_options(-std=c++11)
+add_definitions(-DBOOST_ERROR_CODE_HEADER_ONLY)
+add_definitions(-DBOOST_SYSTEM_NO_DEPRECATED)
+FIND_PACKAGE(Boost REQUIRED )
 aux_source_directory(. DIR_ManagerLIB_SRCS)
 file(GLOB MANAGER_INCLUDE_DIRS ./*.h)
 if(NOT MANAGER_DIR)
@@ -11,6 +14,7 @@ endif()
 INCLUDE_DIRECTORIES(
     ${COMM_INCLUDE_DIRS}
     ${BASE_INCLUDE_DIRS}
+    ${CLASSIFY_INCLUDE_DIRS}
     ${JSONCPP_INCLUDE_DIRS}
     ${JSON2PB_INCLUDE_DIRS}
     ${CTIME_INCLUDE_DIRS}
@@ -22,7 +26,7 @@ set(MANAGER_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR} CACHE INTERNAL "")
 
 add_library (${PROJECT_NAME} ${DIR_ManagerLIB_SRCS} )
 
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} base jsoncpp ${PROTOBUF_LIBRARIES} ${CPR_LIBRARIES} ${ELASTICLIENT_LIBRARIES} comm)
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} base jsoncpp ${PROTOBUF_LIBRARIES} ${CPR_LIBRARIES} ${ELASTICLIENT_LIBRARIES} comm libdataclassify)
 install(TARGETS ${PROJECT_NAME} LIBRARY
         DESTINATION lib)
 
