--- a/supervisor/conf.d/core.conf
+++ b/supervisor/conf.d/core.conf
@@ -5,8 +5,8 @@ user=twd
 autostart=true
 autorestart=true
 startsecs=1
-stdout_logfile=/tmp/ServiceCore_stdout.log
+stdout_logfile=/tmp/core_stdout.log
+stderr_logfile=/tmp/core_stderr.log
 redirect_stderr=true
-
-
-
+stdout_logfile_maxbytes = 10MB
+stderr_logfile_maxbytes = 10MB
