--- a/supervisor/conf.d/es.conf
+++ b/supervisor/conf.d/es.conf
@@ -1,7 +1,6 @@
 [program:es]
 directory=/home/twd/es/elk6/elasticsearch-6.6.0
 command=/home/twd/es/elk6/elasticsearch-6.6.0/bin/elasticsearch
-stdout_logfile=/tmp/es_stdout.log
 user=twd
 autostart=true
 autorestart=true
@@ -9,5 +8,9 @@ autorestart=true
 stopasgroup=true
 killasgroup=true
 startretries=3
+stdout_logfile=/tmp/es_stdout.log
+stderr_logfile=/tmp/es_stderr.log
 redirect_stderr=true
+stdout_logfile_maxbytes = 10MB
+stderr_logfile_maxbytes = 10MB
 
