--- a/Manager/CMakeLists.txt
+++ b/Manager/CMakeLists.txt
@@ -15,6 +15,7 @@ INCLUDE_DIRECTORIES(
     ${COMM_INCLUDE_DIRS}
     ${BASE_INCLUDE_DIRS}
     ${CLASSIFY_INCLUDE_DIRS}
+    ${EXPCLASSIFY_INCLUDE_DIRS}
     ${JSONCPP_INCLUDE_DIRS}
     ${JSON2PB_INCLUDE_DIRS}
     ${CTIME_INCLUDE_DIRS}
@@ -26,7 +27,7 @@ set(MANAGER_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR} CACHE INTERNAL "")
 
 add_library (${PROJECT_NAME} ${DIR_ManagerLIB_SRCS} )
 
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} base jsoncpp ${PROTOBUF_LIBRARIES} ${CPR_LIBRARIES} ${ELASTICLIENT_LIBRARIES} comm libdataclassify)
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} base jsoncpp ${PROTOBUF_LIBRARIES} ${CPR_LIBRARIES} ${ELASTICLIENT_LIBRARIES} comm libdataclassify libput2db)
 install(TARGETS ${PROJECT_NAME} LIBRARY
         DESTINATION lib)
 
