--- a/Classify/app/CMakeLists.txt
+++ b/Classify/app/CMakeLists.txt
@@ -7,10 +7,11 @@ add_subdirectory(fbm)
 add_subdirectory(voxer)
 add_subdirectory(imo)
 add_subdirectory(telegram)
+add_subdirectory(skype)
 INCLUDE_DIRECTORIES(
     ${COMM_INCLUDE_DIRS}
     ${ABSCLASS_INCLUDE}
     )
 add_library(${PROJECT_NAME} ${DIR_APP_SRCS})
-target_link_libraries(${PROJECT_NAME} comm abs fbm voxer imo telegram )
+target_link_libraries(${PROJECT_NAME} comm abs fbm voxer imo telegram skype)
 
